--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "solidity-coverage": "^0.7.18"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.3.1",
     "@openzeppelin/contracts": "^4.4.2"
   }
 }
