--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@chainlink/contracts": "^0.3.1",
-    "@openzeppelin/contracts": "^4.4.2"
+    "@openzeppelin/contracts": "^4.4.2",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0"
   }
 }
